<resources>
    <string name="app_name">BT Call Assistant</string>
    <string name="settings">Settings</string>

    <string name="pref_bt_device_no_device">No device</string>
    <string name="pref_bt_device_template" translatable="false">%1$s [ %2$s ]</string>


    <string name="pref_category_general">General</string>
    <string name="pref_category_debug">Debug</string>


    <string name="pref_title_enable_service">Enable service</string>
    <string name="pref_summ_enable_service">Enable automatic start/stop service for communication</string>

    <string name="pref_title_bt_device">Connect to device</string>

    <string name="pref_title_stop_service_if_screen_off">Stop service if screen is off</string>
    <string name="pref_summ_stop_service_if_screen_off">Stop the service if screen is off and start service when screen is on.</string>

    <string name="pref_title_photo_max_size">Maximum size of contact photo (px)</string>
    <string name="default_photo_max_size" translatable="false">96</string>

    <string name="pref_title_bt_show_popups">Show bluetooth warning popups</string>
    <string name="bt_not_available">Bluetooth is not available</string>
    <string name="bt_not_enabled">Bluetooth is off. Please turn it on to continue</string>

    <string name="pref_title_debug">Debug</string>
    <string name="pref_summ_debug">Enable popups and send additional information to logcat</string>

    <string-array name="spinner_array_event" translatable="false">
        <item>call</item>
        <item>sms</item>
    </string-array>

    <string-array name="spinner_array_type" translatable="false">
        <item>incoming</item>
        <item>outgoing</item>
    </string-array>

    <string-array name="spinner_array_state" translatable="false">
        <item>ringing</item>
        <item>offhook</item>
        <item>idle</item>
        <item>missed</item>
    </string-array>
</resources>
